--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#D17C15"
     tools:context=".ui.activity.MainActivity">
-
-    <ImageView
-        android:id="@+id/ivLogoSignUp"
-        android:layout_width="222dp"
-        android:layout_height="226dp"
-        android:layout_marginStart="105dp"
-        android:layout_marginEnd="104dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/iesb" />
 
     <EditText
         android:id="@+id/etEmail"
@@ -49,6 +39,7 @@
 
     <Button
         android:id="@+id/btLogin"
+        style="@style/Widget.AppCompat.Button"
         android:layout_width="338dp"
         android:layout_height="39dp"
         android:layout_marginStart="32dp"
@@ -56,9 +47,12 @@
         android:layout_marginBottom="32dp"
         android:background="@drawable/botao"
         android:text="Entrar"
+        android:textColor="#FFFFFF"
+        app:iconTint="#4CAF50"
         app:layout_constraintBottom_toTopOf="@+id/btSignUp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:rippleColor="#305E32" />
 
     <Button
         android:id="@+id/btSignUp"
@@ -68,6 +62,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
         android:text="Cadastrar"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/tvForgot"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -107,4 +102,30 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5" />
+
+    <ImageView
+        android:id="@+id/PngLogo"
+        android:layout_width="231dp"
+        android:layout_height="229dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/mercadoSolto" />
+
+    <TextView
+        android:id="@+id/txtTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Mercado Solto"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/etEmail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/PngLogo"
+        app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
