--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -39,10 +39,13 @@
         app:layout_constraintTop_toBottomOf="@+id/ivLogoMain3" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvHome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="174dp"
-        tools:layout_editor_absoluteY="456dp" />
+        android:layout_marginTop="144dp"
+        android:text="Lista de compras"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvTituloMain2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
