--- a/app/src/main/res/layout/activity_forgot.xml
+++ b/app/src/main/res/layout/activity_forgot.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ForgotActivity">
+    tools:context=".view.activities.ForgotActivity">
 
     <Button
         android:id="@+id/btSendForgot"
