--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -4,18 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/verde_botao"
-    android:backgroundTint="@color/verde_botao"
-    tools:context=".view.activities.SplashscreenActivity">
+    tools:context=".view.OnboardingFragment">
 
-    <ImageView
-        android:id="@+id/ivLogoSplashscreen"
-        android:layout_width="261dp"
-        android:layout_height="252dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <Button
+        android:id="@+id/btVamosFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/mercado_solto" />
+        tools:layout_editor_absoluteY="636dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
