--- a/app/src/main/res/layout/fragment_onboarding_first.xml
+++ b/app/src/main/res/layout/fragment_onboarding_first.xml
@@ -4,18 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/verde_botao"
-    android:backgroundTint="@color/verde_botao"
-    tools:context=".view.activities.SplashscreenActivity">
+    tools:context=".view.fragments.onboarding.OnboardingFirstFragment">
 
-    <ImageView
-        android:id="@+id/ivLogoSplashscreen"
-        android:layout_width="261dp"
-        android:layout_height="252dp"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/hello_blank_fragment"
+        android:textAlignment="center"
+        android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/mercado_solto" />
+        app:layout_constraintVertical_bias="1.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
