--- a/app/src/main/res/layout/activity_categorias.xml
+++ b/app/src/main/res/layout/activity_categorias.xml
@@ -7,7 +7,7 @@
     tools:context=".view.activities.CategoriasActivity">
 
     <TextView
-        android:id="@+id/tvTituloMain3"
+        android:id="@+id/tvTituloCategorias"
         android:layout_width="250dp"
         android:layout_height="100dp"
         android:layout_marginStart="16dp"
@@ -20,16 +20,17 @@
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/ivLogoMain3"
+        app:layout_constraintStart_toEndOf="@+id/ivLogoCategorias"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/ivLogoMain2"
+        android:id="@+id/ivLogoCategorias"
         android:layout_width="87dp"
         android:layout_height="85dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+        android:contentDescription="@string/app_name"
         android:rotation="0"
         android:rotationX="0"
         android:rotationY="0"
@@ -38,4 +39,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/mercado_solto" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="293dp"
+        android:layout_height="486dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
