--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -7,7 +7,7 @@
     tools:context=".view.activities.PerfilActivity">
 
     <TextView
-        android:id="@+id/tvTituloMain4"
+        android:id="@+id/tvTituloPerfil"
         android:layout_width="250dp"
         android:layout_height="100dp"
         android:layout_marginStart="16dp"
@@ -20,16 +20,16 @@
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/ivLogoMain3"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/ivLogoMain4"
+        android:id="@+id/ivLogoPerfil"
         android:layout_width="87dp"
         android:layout_height="85dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+        android:contentDescription="@string/app_name"
         android:rotation="0"
         android:rotationX="0"
         android:rotationY="0"
