--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,12 +8,13 @@
     tools:context=".view.activities.Home">
 
     <ImageView
-        android:id="@+id/ivLogoMain3"
+        android:id="@+id/ivLogoHome"
         android:layout_width="87dp"
         android:layout_height="85dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+        android:contentDescription="@string/app_name"
         android:rotation="0"
         android:rotationX="0"
         android:rotationY="0"
@@ -24,7 +25,7 @@
         app:srcCompat="@drawable/mercado_solto" />
 
     <TextView
-        android:id="@+id/tvTituloMain2"
+        android:id="@+id/tvTituloHome"
         android:layout_width="250dp"
         android:layout_height="100dp"
         android:layout_marginStart="16dp"
@@ -37,7 +38,7 @@
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/ivLogoMain3"
+        app:layout_constraintStart_toEndOf="@+id/ivLogoHome"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
